center no longer force wraps

--- a/static/styles.css
+++ b/static/styles.css
@@ -94,7 +94,6 @@ body {
 .center {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     height: 100%;
